# eudoxus

./: .coveragerc  .flake8  .gitignore  .gitmodules  .isort.cfg  .pre-commit-config.yaml  AUTHORS.rst  CITATION.bib  LICENSE  README.md  evaluate.py  experiment.sh  setup.cfg  setup.py
.github/workflows/: ci.yml
data/: ep0.ucl  ep10.ucl  ep13.ucl  ep14.ucl  ep15.ucl  ep16.ucl  ep17.ucl  ep19.ucl  ep20.ucl  ep21.ucl  ep22.ucl  ep23.ucl  ep24.ucl  ep25.ucl  ep26.ucl  ep27.ucl  ep28.ucl  ep29.ucl  ep30.ucl  ep32.ucl  ep33.ucl  ep34.ucl  ep35.ucl  ep36.ucl  ep4.ucl  ep9.ucl  fm0.ucl  fm1.ucl  fm11.ucl  fm13.ucl  fm15.ucl  fm16.ucl  fm18.ucl  fm2.ucl  fm21.ucl  fm22.ucl  fm23.ucl  fm24.ucl  fm27.ucl  fm29.ucl  (+19 more)
data/BaierKatoen/: Readme.md  bk-ex1_1.txt  bk-ex2_11.txt  bk-ex2_12.txt  bk-ex2_17-part2.txt  bk-ex2_17.txt  bk-ex2_2.txt  bk_ex2_20.txt  bk_ex2_25.txt  bk_ex2_29.txt  bk_ex2_30.txt  bk_ex2_32.txt  bk_ex2_43.txt  (+9 more)
docs/: README.md  encoding.md  index.html
eval_baselines/: evaluate_gpt_finetune_no_cot.py  evaluate_gpt_no_cot.py  tabulate.py
examples/: 10.ucl  11.ucl  12.ucl  13.ucl  14.ucl  16.ucl  19.ucl  2.ucl  20.ucl  21.ucl  22.ucl  23.ucl  25.ucl  26.ucl  27.ucl  28.ucl  29.ucl  36.ucl  38.ucl  41.ucl  43.ucl  45.ucl  6.ucl  7.ucl  9.ucl  README.md  arithmetic.input.py  arithmetic.output.py  arithmetic.output.ucl  arity.input.py  arity.output.py  arity.output.ucl  array.input.py  array.output.py  array.output.ucl  array_bv_synonym.input.py  array_bv_synonym.output.py  array_bv_synonym.output.ucl  assign_false.input.py  assign_false.output.ucl  (+144 more)
scripts/: call_llm_on_all_training.py  test_train_split.py
src/: ir.py
tests/: conftest.py  test_examples.py  test_execute.py  test_expr_printer.py  test_extract.py  test_functions.py  test_instances.py  test_instances_printer.py  test_loops.py  test_maxres.py  test_module.py  test_module_printer.py  test_modules.py  test_regressions.py
tests_from_uclid/: handwritten1.ucl  handwritten11.ucl  handwritten13.ucl  handwritten14.ucl  handwritten15.ucl  handwritten18.ucl  handwritten2.ucl  handwritten6.ucl  handwritten7.ucl  handwritten8.ucl  handwritten9.ucl  issue187.ucl  issue207.ucl  issue64.ucl  issue74.ucl  parser_error_1.ucl  parser_error_2.ucl  parser_error_3.ucl  parser_error_4.ucl  parser_error_5.ucl  parser_error_6.ucl  pr148.ucl  readme.md  regression1.ucl  regression10.ucl  regression2.ucl  regression4.ucl  regression6.ucl  regression7.ucl  regression8.ucl  regression9.ucl
(+2489 files in other folders)
